--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mente Vacuna</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <title>Mente Vacuna - ¡Piensa como un rebaño! 🐮</title>
+    <meta name="description" content="Juego multijugador donde debes pensar como un rebaño y dar respuestas mayoritarias para ganar puntos" />
   </head>
   <body>
     <div id="root"></div>
